--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^0.9.0",
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.2.0",
